plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.devwuu'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

ext {
	// 본가 com.querydsl은 5.1.0(2024)에서 멈춰 있고 Jakarta 지원이 :jakarta 분류자를 얹은 5.x가 마지막이라
	// Boot 4.1 BOM이 물어오는 Hibernate 7.4.1과 맞지 않는다. 유지되는 포크를 쓴다 — apt 분류자가 :jpa이고
	// (본가의 :jakarta와 다르다) hibernate-core를 provided로만 참조해 버전을 끌고 오지 않는다.
	querydslVersion = '7.0'
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	// JSON = 유일한 원본 저장 포맷. jackson-databind + jsr310(날짜) + parameter-names 포함 (ref: data-model.md#2, ADR-1)
	implementation 'org.springframework.boot:spring-boot-starter-json'
	// Thymeleaf: 정적 HTML 생성기 용법(오프라인 실행) — 카드 HTML을 굽는 용도이지 서버 렌더링이 아니다 (ref: plan.md#ADR-7)
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	// 웹 계층 — REST API + SPA 정적 서빙 (ref: plan.md#ADR-78, changes/0029 delta.md#D-4·#D-10 ④).
	// ADR-7이 "file:// 열람이면 웹서버 불요"로 기각해 둔 자리를 델타 0029가 뒤집었다: 클라이언트가 앱(SPA)이 되며
	// 서버가 API와 화면 자산을 함께 내놓는다. 프로세스·오리진을 하나로 유지하는 것이 근거다(CORS 부재).
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// DB = source of truth (ref: changes/0028-rdb-storage/delta.md#ADR-73). 로컬 Postgres는 docker-compose.yml.
	// JPA: Note → entries → brews → recipe/tasting 3단 중첩을 매핑으로 다룬다.
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	// 스키마 소유권은 Flyway 단독 — JPA는 ddl-auto: validate로 대조만 한다(엔티티↔DDL 드리프트 검출).
	// Spring Boot 4는 자동설정을 기술별 모듈로 쪼갰다 — flyway-core만 넣으면 라이브러리는 올라오지만
	// 기동 시 마이그레이션이 아예 돌지 않는다(실측: flyway_schema_history 미생성). spring-boot-flyway가 자동설정 소유자이고
	// flyway-core를 추이 포함한다. flyway-database-postgresql은 Flyway 10+에서 분리된 Postgres 방언 모듈로, 없으면 미지원 DB로 실패한다.
	implementation 'org.springframework.boot:spring-boot-flyway'
	runtimeOnly 'org.flywaydb:flyway-database-postgresql'
	// 드라이버는 런타임에만 필요 — 애플리케이션 코드가 JDBC 벤더 타입을 참조하지 않게 컴파일 경로에서 뺀다(NFR-4).
	runtimeOnly 'org.postgresql:postgresql'

	// QueryDSL — 엔티티에 연관 매핑을 두지 않으므로(TΔ3a) 조인·조립·정렬·순서 삭제를 질의가 전담한다.
	// Spring Data의 custom fragment(NoteEntityRepositoryCustomImpl)에서만 쓰인다.
	implementation "io.github.openfeign.querydsl:querydsl-jpa:${querydslVersion}"
	annotationProcessor "io.github.openfeign.querydsl:querydsl-apt:${querydslVersion}:jpa"
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	// Slack SDK 2종(bolt-socket-mode·Java-WebSocket)은 changes/0029 TΔ16에서 제거됐다 — 앱이 입구를
	// 가져가며 ADR-2(Socket Mode 수신)의 전제가 만료됐고, 지속 연결 비용도 함께 사라졌다(delta D-3·D-10 ①).

	// OpenAI 클라이언트 — LlmClient/SearchClient 구현체 뒤에만 존재 (ref: plan.md#ADR-5)
	// raw SDK로 시작. Spring AI 2.0 GA + web search production 지원 시 구현체 내부 교체 재검토 (ADR-5 재검토 트리거)
	implementation 'com.openai:openai-java:4.42.0'

	// 공식 상품 페이지 HTML fetch·상세 이미지 URL 추출 (ref: plan.md#ADR-15, changes/0006-official-page-image-ocr).
	// 정규식 파싱 대신 HTML 파서 — 문제 관측 후 도입(right-sizing). 페이지 fetch·파싱은 이미지 수집기 경계 클래스 안에만 노출(NFR-4).
	implementation 'org.jsoup:jsoup:1.22.2'

	// 카드 HTML → JPG 래스터화 = 헤드리스 Chromium (ref: plan.md#ADR-11, changes/0002-instagram-share-card).
	// flexbox·컬러 이모지·한글 웹폰트를 온전히 렌더하려면 실제 브라우저 엔진이 필요. 순수 Java(openhtmltopdf)는 flexbox 미지원.
	// Chromium 바이너리는 Playwright가 관리(첫 launch 시 다운로드 or `./gradlew installChromium` 사전설치). 렌더 엔진은 CardImageRenderer 뒤에만 노출(NFR-4).
	implementation 'com.microsoft.playwright:playwright:1.49.0'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	// @WebMvcTest 슬라이스. Boot 4는 테스트 자동설정도 기술별 모듈로 쪼갰고(flyway 자동설정과 같은 사정)
	// starter-test는 이것을 추이 포함하지 않는다. 웹 계층만 띄우는 가벼운 컨텍스트가 필요한 자리에 쓴다 —
	// 정적 서빙·SPA fallback(TΔ23)은 DB와 무관해서 실 Postgres를 요구하는 통합 기반을 쓸 이유가 없다.
	testImplementation 'org.springframework.boot:spring-boot-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// eval 케이스(case.yaml) 파싱 전용 — 테스트 스코프 (ref: plan.md#ADR-68, changes/0026).
	// 런타임 데이터는 전부 JSON이라 프로덕션에는 YAML이 없다. 케이스 파일만 사람이 손으로 쓰는 자산이라
	// 주석·멀티라인 발화가 필요해 YAML을 골랐고, 그 대가를 테스트 스코프에 가둔다.
	testImplementation 'tools.jackson.dataformat:jackson-dataformat-yaml'
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs.add('-Xlint:deprecation')
}

// ── 프론트엔드(frontend/, React + TS + Vite) 빌드 통합 ─────────────────────────────
// `./gradlew build` 한 번에 프론트가 함께 빌드되고 산출물이 jar 안으로 들어간다
// (ref: changes/0029 delta.md#D-10 ④, tasks.md TΔ23). 배포 산출물 경로는 항상 이것 하나다 —
// Vite dev server(HMR)는 개발 편의일 뿐 두 번째 배포 경로가 아니다.
//
// POLICY: 시스템에 설치된 Node/npm을 전제한다 — Gradle Node 플러그인으로 툴체인을 내려받지 않는다.
// 이 저장소는 이미 `docker compose up -d` 선행을 수용한 관례가 있고(백엔드 CLAUDE.md §5.2),
// 빌드 플러그인 하나를 아끼는 쪽이 right-sizing에 맞는다(루트 CLAUDE.md §4).
def npmExecutable = System.getProperty('os.name').toLowerCase().contains('windows') ? 'npm.cmd' : 'npm'
def frontendDir = layout.projectDirectory.dir('frontend')
def frontendOutputDir = layout.buildDirectory.dir('frontend')

tasks.register('frontendInstall', Exec) {
	group = 'frontend'
	description = 'Install frontend dependencies (npm ci).'
	workingDir frontendDir
	commandLine npmExecutable, 'ci'
	// lock 파일이 바뀌지 않으면 다시 돌지 않는다. `npm ci`를 쓰는 이유는 lock을 정본으로 고정하기 위함이고,
	// 그래야 빌드가 개발 머신마다 다른 트리를 만들지 않는다.
	inputs.file(frontendDir.file('package.json'))
	inputs.file(frontendDir.file('package-lock.json'))
	outputs.dir(frontendDir.dir('node_modules'))
	doFirst {
		// npm이 PATH에 없을 때 Exec의 원문 오류는 원인을 알려주지 않는다 — 무엇을 해야 하는지로 바꾼다.
		if (providers.exec { commandLine npmExecutable, '--version' }.result.get().exitValue != 0) {
			throw new GradleException("npm을 찾을 수 없다. Node.js 설치 후 다시 실행한다 (frontend/ 빌드에 필요 — TΔ23).")
		}
	}
}

tasks.register('frontendBuild', Exec) {
	group = 'frontend'
	description = 'Build the frontend bundle into build/frontend (vite build).'
	dependsOn 'frontendInstall'
	workingDir frontendDir
	commandLine npmExecutable, 'run', 'build'
	inputs.dir(frontendDir.dir('src'))
	// public/은 Vite가 산출물 루트로 그대로 복사하는 정적 자산(마스코트 등, TΔ10) — 바뀌면 다시 빌드해야 한다.
	inputs.dir(frontendDir.dir('public'))
	inputs.file(frontendDir.file('index.html'))
	inputs.file(frontendDir.file('vite.config.ts'))
	inputs.files(frontendDir.file('tsconfig.json'), frontendDir.file('tsconfig.app.json'), frontendDir.file('tsconfig.node.json'))
	inputs.file(frontendDir.file('package.json'))
	// 출력 경로는 vite.config.ts의 build.outDir과 짝이다 — 한쪽만 바꾸면 배관이 끊긴다.
	outputs.dir(frontendOutputDir)
}

// 산출물을 classpath의 static/으로 얹는다. src/main/resources/static/에 직접 쓰지 않는 이유는
// 소스 트리에 빌드 산출물이 섞이고 .gitignore 예외가 필요해지기 때문이다(tasks.md TΔ23).
tasks.named('processResources') {
	dependsOn 'frontendBuild'
	from(frontendOutputDir) {
		into 'static'
	}
}

// 기본 test는 실 Chromium을 기동하는 무거운 스모크(@Tag("chromium"))를 제외한다 —
// 비용·불안정성·바이너리 다운로드 의존을 기본 실행에서 차단(백엔드 CLAUDE.md §5.2). 태깅 컨벤션 신설.
tasks.named('test') {
	useJUnitPlatform {
		// 실 외부 호출 스모크는 기본 실행에서 제외 — 무거운 Chromium(ADR-11), 비용 발생 OpenAI 호출.
		// eval(행동 회귀 — 실 LLM + 계약 단언, ADR-68)도 같은 이유로 온디맨드만: 기본 test에 API 콜 0(AC-Δ2).
		excludeTags 'chromium', 'openai', 'eval'
	}
	// 계약 스냅샷 재캡처 게이트(-Dmocha.contract.recapture=true)를 테스트 JVM으로 전달
	// (AgentModelContractSnapshotTest.recaptureSnapshot — 의도된 계약 변경 시에만).
	if (System.getProperty('mocha.contract.recapture') != null) {
		systemProperty 'mocha.contract.recapture', System.getProperty('mocha.contract.recapture')
	}
}

// 실 OpenAI 호출 스모크만 온디맨드: `./gradlew openaiTest` (.env.local의 OPENAI_API_KEY 필요, 비용 발생).
//tasks.register('openaiTest', Test) {
//	group = 'verification'
//	description = 'Run @Tag("openai") smoke tests that hit the real OpenAI API (metered, manual).'
//	testClassesDirs = sourceSets.test.output.classesDirs
//	classpath = sourceSets.test.runtimeClasspath
//	useJUnitPlatform {
//		includeTags 'openai'
//	}
//	testLogging {
//		showStandardStreams = true
//	}
//	// 실 API 관측은 코드 무변경이어도 매번 다시 돈다 — UP-TO-DATE 스킵 방지.
//	outputs.upToDateWhen { false }
//	// 프로브 모델 재정의(-Dmocha.probe.model=...)를 테스트 JVM으로 전달.
//	if (System.getProperty('mocha.probe.model') != null) {
//		systemProperty 'mocha.probe.model', System.getProperty('mocha.probe.model')
//	}
//}

// 행동 eval 하네스만 온디맨드: `./gradlew evalTest` (.env.local의 OPENAI_API_KEY 필요, 비용 발생 — ADR-68).
// 케이스(eval/cases/)는 실발화라 비커밋이다 — 없으면 실패가 아니라 스킵으로 끝난다(AC-Δ2).
tasks.register('evalTest', Test) {
	group = 'verification'
	description = 'Run @Tag("eval") behavior regression cases against the real LLM (metered, manual).'
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
	useJUnitPlatform {
		includeTags 'eval'
	}
	testLogging {
		// 회차별 tool 시퀀스·거부 사유·pending diff가 표준출력으로 나온다 — 통과 회차도 남는다(AC-Δ4).
		showStandardStreams = true
	}
	// 행동 관측은 코드 무변경이어도 매번 다시 돈다 — UP-TO-DATE 스킵 방지(구 openaiTest 패턴 승계).
	outputs.upToDateWhen { false }
	// 케이스 루트·반복 수·모델 재정의를 테스트 JVM으로 전달. mocha.* 런타임 설정 키가 아니라 -D 전용(plan §5).
	['mocha.eval.cases-dir', 'mocha.eval.repetitions', 'mocha.eval.model', 'mocha.eval.segmenter-model'].each { key ->
		if (System.getProperty(key) != null) {
			systemProperty key, System.getProperty(key)
		}
	}
}

// 실 Chromium 스모크만 온디맨드 실행: `./gradlew chromiumTest` (사전에 installChromium 필요).
tasks.register('chromiumTest', Test) {
	group = 'verification'
	description = 'Run heavy @Tag("chromium") tests that boot real headless Chromium (ADR-11).'
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
	useJUnitPlatform {
		includeTags 'chromium'
	}
}

// Playwright가 구동하는 Chromium 바이너리 사전 설치(~수백MB, 네트워크 필요). 첫 launch 시 자동 다운로드도 되지만 명시 설치 경로 제공.
tasks.register('installChromium', JavaExec) {
	group = 'playwright'
	description = 'Download the Chromium binary Playwright drives into ~/.cache/ms-playwright (ADR-11).'
	classpath = sourceSets.main.runtimeClasspath
	mainClass = 'com.microsoft.playwright.CLI'
	args 'install', 'chromium'
}
